Fix to CSS: Fixed padding left of booklist not functioning on safari or edge due to incompatible properties.

--- a/PrixDG/stylesIntermediate.css
+++ b/PrixDG/stylesIntermediate.css
@@ -85,6 +85,8 @@ li.booklist-item:not(.booklist-last)::after
 .booklist
 {
     padding-inline-start: 0px;
+    -webkit-margin-start: 0px;
+    padding-left: 0px;
 }
 
 .booklist-image
