--- a/PrixDG/stylesMobile.css
+++ b/PrixDG/stylesMobile.css
@@ -91,6 +91,8 @@ li.booklist-item:not(.booklist-last)::after
 .booklist
 {
     padding-inline-start: 0px;
+    -webkit-margin-start: 0px;
+    padding-left: 0px;
 }
 
 .booklist-image
